fix[asymworks.docker.common]: update Docker for Debian 13 compatibility

--- a/docker/roles/common/tasks/main-debian.yaml
+++ b/docker/roles/common/tasks/main-debian.yaml
@@ -19,7 +19,7 @@
     uris: https://download.docker.com/linux/debian
     signed_by: https://download.docker.com/linux/debian/gpg
     suites: ["{{ ansible_facts['distribution_release']|lower }}"]
-    components: [main]
+    components: [stable]
     state: present
     enabled: true
 
